--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -4,7 +4,10 @@ html {
 	width: 100%;
 	height: 100%;
 	
+
+	
 }
+
 ul {
 	list-style: none;
 	margin: 0;
@@ -41,6 +44,11 @@ hr.light {
 	border: none;
 	border-radius: 10rem;
 }
+.btn-br {
+	border-radius: 10rem;
+
+
+}
 
 // Page section padding
 .page-section {
@@ -57,4 +65,219 @@ hr.light {
 }
 .activeStyle {
 	color: $primary;
+}
+.fade-in {
+	animation: fadeIn ease 3s;
+	-webkit-animation: fadeIn ease 3s;
+	-moz-animation: fadeIn ease 3s;
+	-o-animation: fadeIn ease 3s;
+	-ms-animation: fadeIn ease 3s;
+  }
+.p-0 {
+	padding: 0!important;
+}
+  
+  @keyframes fadeIn{
+	0% {
+	  opacity:0;
+	}
+	100% {
+	  opacity:1;
+	}
+  }
+  
+  @-moz-keyframes fadeIn {
+	0% {
+	  opacity:0;
+	}
+	100% {
+	  opacity:1;
+	}
+  }
+  
+  @-webkit-keyframes fadeIn {
+	0% {
+	  opacity:0;
+	}
+	100% {
+	  opacity:1;
+	}
+  }
+  
+  @-o-keyframes fadeIn {
+	0% {
+	  opacity:0;
+	}
+	100% {
+	  opacity:1;
+	}
+  }
+  
+  @-ms-keyframes fadeIn {
+	0% {
+	  opacity:0;
+	}
+	100% {
+	  opacity:1;
+	}
+  }
+
+  .custom-card{
+    border-radius: 5px;
+    padding: 40px 10px;
+	cursor: pointer;
+
+     &:hover {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.30);
+	transition: 0.3s ease-in;
+
+    
+    }
+}
+
+.custom-button {
+	z-index: 1;
+	font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background: none;
+    cursor: pointer;
+    padding: 1rem 2rem;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+    outline: none;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+	border: 2px solid #fff;
+	color: #fff;
+	overflow: hidden;
+	&:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    background: #fff;
+	opacity: 0;
+	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	transition: all 0.3s;
+	z-index: -1;
+	text-decoration: none;
+}
+	&:hover {
+	color:$primary;
+	text-decoration: none;
+
+
+}
+	&:hover:after {
+	height: 260%;
+	opacity: 1;
+	
+    
+}
+
+	}
+.custom-button__primary {
+	z-index: 1;
+	font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background: none;
+    cursor: pointer;
+    padding: 1rem 2rem;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+    outline: none;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+	border: 2px solid $primary;
+	color:$primary;
+	overflow: hidden;
+	&:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    background:black;
+	opacity: 0;
+	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	transition: all 0.3s;
+	z-index: -1;
+}
+	&:hover {
+	color:#fff;
+	text-decoration: none;
+
+
+}
+	&:hover:after {
+	height: 260%;
+	opacity: 1;
+	
+    
+}
+
+	}
+	.custom-button__black {
+		z-index: 1;
+		font-family: inherit;
+		font-size: inherit;
+		color: inherit;
+		background: none;
+		cursor: pointer;
+		padding: 1rem 2rem;
+		display: inline-block;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-weight: 700;
+		outline: none;
+		position: relative;
+		-webkit-transition: all 0.3s;
+		-moz-transition: all 0.3s;
+		transition: all 0.3s;
+		border: 2px solid black;
+		color:black;
+		overflow: hidden;
+		&:after {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 0;
+		top: 50%;
+		left: 50%;
+		background:$primary;
+		opacity: 0;
+		transform: translateX(-50%) translateY(-50%) rotate(45deg);
+		transition: all 0.3s;
+		z-index: -1;
+	}
+		&:hover {
+		color:black;
+		text-decoration: none;
+	
+	
+	}
+		&:hover:after {
+		height: 260%;
+		opacity: 1;
+		
+		
+	}
+	
+		}
+.social-media__list-item i:hover {
+	
+color: $primary;
 }
