--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -1,5 +1,5 @@
 .projects__bcg {
-    background: linear-gradient(to bottom, #{fade-out($brown, .2)} 0%,#{fade-out($brown, .2)} 100%), url('../images/projectsBcg.jpg');
+    background: linear-gradient(to left, #{fade-out(#8b86a3, .2)} 0%,#{fade-out(#322e40, .2)} 100%), url('../images/projectsBcg.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -9,4 +9,45 @@
     h2 {
         font-size: 3rem;
     }
+}
+.projects__container {
+    position: relative;
+}
+.projects__container:hover {
+    .projects__overlay {
+        opacity: 0.7;
+    }
+    .project__heading-wrapp {
+        bottom: 0;
+        transition: bottom 0.3s linear;
+        opacity: 1;
+    }
+}
+.projects__overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background: rgba(93, 200, 215, 0.9);
+    transition: opacity 0.55s ease 0s;
+    opacity: 0;
+    overflow: hidden;
+    
+}
+.project__heading-wrapp {
+    position: absolute;
+    bottom: -157px;
+    padding: 2rem;
+    opacity: 0;
+
+}
+.btn-outline-primary {
+    webkit-transition: background-color 0.5s ease-out;
+  -moz-transition: background-color 0.5s ease-out;
+  -o-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
 }
