Adding new map and css

--- a/src/sass/_partner.scss
+++ b/src/sass/_partner.scss
@@ -5,7 +5,7 @@
     background-position: cover no-repeat;
     background-color:$primary;
     background-attachment: fixed;
-    
+    padding-top: 8rem;  
     h2 {
         font-size: 4rem;
     }
