--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -4,8 +4,6 @@ html {
 	width: 100%;
 	height: 100%;
 	
-
-	
 }
 
 ul {
@@ -52,7 +50,7 @@ hr.light {
 
 // Page section padding
 .page-section {
-	padding: 8rem 0;
+	padding: 4rem 0 8rem;
 }
 
 // Modal
