--- a/src/sass/_partners.scss
+++ b/src/sass/_partners.scss
@@ -27,9 +27,9 @@
     background-blend-mode: overlay;
     background-size: cover;
     background-position: cover no-repeat;
-    // background-color: $primary;
     background-color:#E6E7E8;
-
+    background-color:#FBC441;
+    background-color: $primary;
 
 
     background-attachment: fixed;
@@ -42,6 +42,9 @@
 .partners__custom-card{
     border-radius: 5px;
     padding: 30px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 	cursor: pointer;
 	filter: grayscale(100%);
      &:hover {
