--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -8,6 +8,9 @@
     height: 50vh;
     h2 {
         font-size: 3rem;
+        @media only screen and (min-width: 768px) {
+            font-size: 7rem;
+          }
     }
 }
 .projects__container {
