--- a/src/sass/_partners.scss
+++ b/src/sass/_partners.scss
@@ -11,27 +11,22 @@
     background-size: cover;
     width: 100%;
     height: 50vh;
-    h2 {
-        font-size: 3rem;
-    }
+    
 
 }
 .partners__bcg_white {
     
 	@media only screen and (max-width: 600px) {
-		height: 70vh;
+        height: 70vh;
+        padding: 7rem 0;
 	}
 }
 .partners__background_blue {
-    // background: url('../images/partners/background1.jpg');
+    background: url('../images/partners/background1.jpg');
     background-blend-mode: overlay;
     background-size: cover;
     background-position: cover no-repeat;
-    background-color:#E6E7E8;
-    background-color:#FBC441;
     background-color: $primary;
-
-
     background-attachment: fixed;
     padding: 2rem;
 }
