--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -24,3 +24,4 @@
 @import "../sass/projects.scss";
 @import "../sass/project.scss";
 @import "../sass/services.scss";
+@import "../sass/footer.scss";
