--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,8 +18,8 @@ $primary: $orange !default;
 // $font-family-base: $font-family-serif !default;
 
 // $headings-font-family: $font-family-sans-serif !default;
-$font-family-sans-serif: 'Heebo', sans-serif;
-$font-family-serif: 'Heebo', sans-serif; 
+$font-family-sans-serif: 'Inter', sans-serif;
+$font-family-serif: 'Inter', sans-serif; 
 $font-family-base: $font-family-serif !default;
 
 $headings-font-family: $font-family-sans-serif !default;
