Migrating to "gatsby-source-wordpress-experimental"

--- a/src/sass/_project.scss
+++ b/src/sass/_project.scss
@@ -1,41 +1,46 @@
 .project__bcg {
-    background: linear-gradient(to left, #{fade-out(#8b86a3, .2)} 0%,#{fade-out(#322e40, .2)} 100%);
-	background-position: center;
-	background-repeat: no-repeat;
-    width: 100%;
-    height: 50vh;
-    position: relative;
-    h2 {
-        font-size: 3rem;
-        @media only screen and (min-width: 768px) {
-            font-size: 7rem;
-          }
+  background: linear-gradient(
+    to left,
+    #{fade-out(#8b86a3, 0.2)} 0%,
+    #{fade-out(#322e40, 0.2)} 100%
+  );
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 50vh;
+  position: relative;
+  h2 {
+    font-size: 3rem;
+    @media only screen and (min-width: 768px) {
+      font-size: 7rem;
     }
+  }
 }
 .header__bcg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 50vh;
-    z-index: -1;
-    object-fit: cover;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 50vh;
+  z-index: -1;
+  object-fit: cover;
 }
 .project__list-item {
-    border-bottom: 1px solid #eee;
-    width: 100%;
-    margin: 0 0 15px 0;
-    text-align: left;
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  margin: 0 0 15px 0;
+  text-align: left;
 }
 .project .img-fluid:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 .grid {
-column-width: 400px;
+  column-width: 400px;
   column-gap: 10px;
   padding: 5px;
 }
 .project__gallery-item {
-    display: inline-block;
-    height: auto;
+  display: inline-block;
+  width: 100%;
+  height: auto;
 }
