--- a/src/sass/_partners.scss
+++ b/src/sass/_partners.scss
@@ -1,52 +1,51 @@
 .partners {
-    padding: 0;
-    
+  padding: 0;
 }
 .partners__bcg {
-    
-	background: linear-gradient(to left, #{fade-out(#8b86a3, .2)} 0%,#{fade-out(#322e40, .2)} 100%), url('../images/partners/partneri.png');
-	background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-    height: 50vh;
-    
-
+  background: linear-gradient(
+      to left,
+      #{fade-out(#8b86a3, 0.2)} 0%,
+      #{fade-out(#322e40, 0.2)} 100%
+    ),
+    url("../images/partners/partneri.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  height: 50vh;
 }
 .partners__bcg_white {
-    
-	@media only screen and (max-width: 600px) {
-        height: 70vh;
-        padding: 7rem 0;
-	}
+  @media only screen and (max-width: 600px) {
+    height: 70vh;
+    padding: 7rem 0;
+  }
 }
 .partners__background_blue {
-    background: url('../images/partners/background1.jpg');
-    background-blend-mode: overlay;
-    background-size: cover;
-    background-position: cover no-repeat;
-    background-color: $primary;
-    background-attachment: fixed;
-    padding: 2rem;
+  background: url("../images/partners/background1.jpg");
+  background-blend-mode: overlay;
+  background-size: cover;
+  background-position: cover no-repeat;
+  background-color: $primary;
+  background-attachment: fixed;
+  padding: 2rem;
 }
 .partners__img {
-    height: 60px;
-    width: 150px;
+  height: 60px;
+  width: 150px;
 }
-.partners__custom-card{
-    border-radius: 5px;
-    padding: 30px 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-	cursor: pointer;
-	filter: grayscale(100%);
-     &:hover {
+.partners__custom-card {
+  border-radius: 5px;
+  padding: 30px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  filter: grayscale(100%);
+  &:hover {
     background-color: #fff;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.30);
-	transition: 0.3s ease-in;
-	filter: none;
-    
-    }
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+    transition: 0.3s ease-in;
+    filter: none;
+  }
 }
