--- a/src/components/portfolio/carousel.scss
+++ b/src/components/portfolio/carousel.scss
@@ -1,44 +1,43 @@
 .carousel {
-	position: static;
+  position: static;
 
-	.carousel-control-prev, .carousel-control-next {
-		width: 5%;
-		padding-top: 56px;
-	}
+  .carousel-control-prev,
+  .carousel-control-next {
+    width: 5%;
+    padding-top: 56px;
+  }
 
-	figure {
-		margin: 0;
+  figure {
+    margin: 0;
 
-		figcaption {
-			height: 24px;
-			position: relative;
-		}
+    figcaption {
+      height: 24px;
+      position: relative;
+    }
 
-		.bottom-bar {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			cursor: auto;
+    .bottom-bar {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      cursor: auto;
 
-			.counter {
-				position: absolute;
-				top: 4px;
-				right: 0;
-				color: #CCC;
-				font-size: 12px;
-				line-height: 18px;
-				white-space: nowrap;
-			}
-		}
-	}
+      .counter {
+        position: absolute;
+        top: 4px;
+        right: 0;
+        color: #ccc;
+        font-size: 12px;
+        line-height: 18px;
+        white-space: nowrap;
+      }
+    }
+  }
 }
 
 .carousel__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center center;
-    
-
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
 }
