--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,288 +1,267 @@
 // Global styling for this template
 body,
 html {
-	width: 100%;
-	height: 100%;
-	
+  width: 100%;
+  height: 100%;
 }
 
 ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 // Typography
 .text-white-75 {
-	color: fade-out($white, .25);
+  color: fade-out($white, 0.25);
 }
-
-  
 
 // Custom horizontal rules
 hr.divider {
-	max-width: 3.25rem;
-	border-width: 0.2rem;
-	border-color: $primary;
+  max-width: 3.25rem;
+  border-width: 0.2rem;
+  border-color: $primary;
 }
 
 hr.light {
-	border-color: $white;
+  border-color: $white;
 }
 
 // Button restyling
 .btn {
-	font-family: $font-family-sans-serif;
+  font-family: $font-family-sans-serif;
 }
 
 .btn-xl {
-	padding: 1.25rem 2.25rem;
-	font-size: 0.85rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	border: none;
-	border-radius: 10rem;
+  padding: 1.25rem 2.25rem;
+  font-size: 0.85rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10rem;
 }
 .btn-br {
-	border-radius: 10rem;
-
-
+  border-radius: 10rem;
 }
 // navbar moile-icons
 .navbar-light .navbar-toggler {
-	border-color:transparent!important;
+  border-color: transparent !important;
 }
 .navbar-toggler {
-    
-    font-size: 1.7rem!important;
+  font-size: 1.7rem !important;
 }
 // Page section padding
 .page-section {
-	padding: 4rem 0 8rem;
+  padding: 4rem 0 8rem;
 }
 
 // Modal
 .modal-backdrop {
-	background-color: #0b0b0b;
+  background-color: #0b0b0b;
 }
 
 .modal-backdrop.show {
-	opacity: 0.8;
+  opacity: 0.8;
 }
 .activeStyle {
-	color: $primary;
+  color: $primary;
 }
 .fade-in {
-	animation: fadeIn ease 3s;
-	-webkit-animation: fadeIn ease 3s;
-	-moz-animation: fadeIn ease 3s;
-	-o-animation: fadeIn ease 3s;
-	-ms-animation: fadeIn ease 3s;
-  }
-.p-0 {
-	padding: 0!important;
+  animation: fadeIn ease 3s;
+  -webkit-animation: fadeIn ease 3s;
+  -moz-animation: fadeIn ease 3s;
+  -o-animation: fadeIn ease 3s;
+  -ms-animation: fadeIn ease 3s;
 }
-  
-  @keyframes fadeIn{
-	0% {
-	  opacity:0;
-	}
-	100% {
-	  opacity:1;
-	}
-  }
-  
-  @-moz-keyframes fadeIn {
-	0% {
-	  opacity:0;
-	}
-	100% {
-	  opacity:1;
-	}
-  }
-  
-  @-webkit-keyframes fadeIn {
-	0% {
-	  opacity:0;
-	}
-	100% {
-	  opacity:1;
-	}
-  }
-  
-  @-o-keyframes fadeIn {
-	0% {
-	  opacity:0;
-	}
-	100% {
-	  opacity:1;
-	}
-  }
-  
-  @-ms-keyframes fadeIn {
-	0% {
-	  opacity:0;
-	}
-	100% {
-	  opacity:1;
-	}
-  }
+.p-0 {
+  padding: 0 !important;
+}
 
-  .custom-card{
-    border-radius: 5px;
-    padding: 40px 10px;
-	cursor: pointer;
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-     &:hover {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.30);
-	transition: 0.3s ease-in;
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-    
-    }
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.custom-card {
+  border-radius: 5px;
+  padding: 40px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+    transition: 0.3s ease-in;
+  }
 }
 
 .custom-button {
-	z-index: 1;
-	font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background: none;
-    cursor: pointer;
-    padding: 1rem 2rem;
-    display: inline-block;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 700;
-    outline: none;
-    position: relative;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-	border: 2px solid #fff;
-	color: #fff;
-	overflow: hidden;
-	&:after {
-	content: "";
-	position: absolute;
-	width: 100%;
+  z-index: 1;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  border: 2px solid #fff;
+  color: #fff;
+  overflow: hidden;
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
     height: 0;
     top: 50%;
     left: 50%;
     background: #fff;
-	opacity: 0;
-	transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	transition: all 0.3s;
-	z-index: -1;
-	text-decoration: none;
-}
-	&:hover {
-	color:$primary;
-	text-decoration: none;
-
-
-}
-	&:hover:after {
-	height: 260%;
-	opacity: 1;
-	
-    
-}
-
-	}
-.custom-button__primary {
-	z-index: 1;
-	font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background: none;
-    cursor: pointer;
-    padding: 1rem 2rem;
-    display: inline-block;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 700;
-    outline: none;
-    position: relative;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
+    opacity: 0;
+    transform: translateX(-50%) translateY(-50%) rotate(45deg);
     transition: all 0.3s;
-	border: 2px solid $primary;
-	color:$primary;
-	overflow: hidden;
-	&:after {
-	content: "";
-	position: absolute;
-	width: 100%;
+    z-index: -1;
+    text-decoration: none;
+  }
+  &:hover {
+    color: $primary;
+    text-decoration: none;
+  }
+  &:hover:after {
+    height: 260%;
+    opacity: 1;
+  }
+}
+.custom-button__primary {
+  z-index: 1;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  border: 2px solid $primary;
+  color: $primary;
+  overflow: hidden;
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
     height: 0;
     top: 50%;
     left: 50%;
-    background:black;
-	opacity: 0;
-	transform: translateX(-50%) translateY(-50%) rotate(45deg);
-	transition: all 0.3s;
-	z-index: -1;
+    background: black;
+    opacity: 0;
+    transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    transition: all 0.3s;
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+  }
+  &:hover:after {
+    height: 260%;
+    opacity: 1;
+  }
 }
-	&:hover {
-	color:#fff;
-	text-decoration: none;
-
-
+.custom-button__black {
+  z-index: 1;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  border: 2px solid black;
+  color: black;
+  overflow: hidden;
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    background: $primary;
+    opacity: 0;
+    transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    transition: all 0.3s;
+    z-index: -1;
+  }
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
+  &:hover:after {
+    height: 260%;
+    opacity: 1;
+  }
 }
-	&:hover:after {
-	height: 260%;
-	opacity: 1;
-	
-    
-}
-
-	}
-	.custom-button__black {
-		z-index: 1;
-		font-family: inherit;
-		font-size: inherit;
-		color: inherit;
-		background: none;
-		cursor: pointer;
-		padding: 1rem 2rem;
-		display: inline-block;
-		text-transform: uppercase;
-		letter-spacing: 1px;
-		font-weight: 700;
-		outline: none;
-		position: relative;
-		-webkit-transition: all 0.3s;
-		-moz-transition: all 0.3s;
-		transition: all 0.3s;
-		border: 2px solid black;
-		color:black;
-		overflow: hidden;
-		&:after {
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 0;
-		top: 50%;
-		left: 50%;
-		background:$primary;
-		opacity: 0;
-		transform: translateX(-50%) translateY(-50%) rotate(45deg);
-		transition: all 0.3s;
-		z-index: -1;
-	}
-		&:hover {
-		color:black;
-		text-decoration: none;
-	
-	
-	}
-		&:hover:after {
-		height: 260%;
-		opacity: 1;
-		
-		
-	}
-	
-		}
 .social-media__list-item i:hover {
-	
-color: $primary;
+  color: $primary;
 }
