--- a/src/sass/_project.scss
+++ b/src/sass/_project.scss
@@ -33,8 +33,6 @@
     right: 5%;
     left: 5%;
   }
-
-  // width: 100%;
 }
 
 .project__list-item {
@@ -55,4 +53,50 @@
   display: inline-block;
   width: 100%;
   height: auto;
+}
+
+$margin-top: 2rem;
+$transition-duration: 0.3s;
+
+.project-navigation-links-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: $margin-top;
+
+  .project-navigation-link {
+    text-decoration: none;
+    color: $black;
+    font-weight: bold;
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      color: $black;
+      text-decoration: none;
+
+      .arrow {
+        transform: translateX(5px); // Common hover effect for both links
+      }
+    }
+
+    &.previous-link:hover .arrow {
+      transform: translateX(-5px);
+    }
+
+    &.next-link:hover .arrow {
+      transform: translateX(5px);
+    }
+
+    .arrow {
+      margin-left: 0.5rem;
+      transition: transform $transition-duration ease;
+      font-weight: bold;
+    }
+  }
+
+  .empty-link {
+    flex-grow: 1;
+  }
 }
