--- a/src/sass/_services.scss
+++ b/src/sass/_services.scss
@@ -1,107 +1,112 @@
-
 .services__front_bcg {
-    background: url('../images/featue-bg.jpg');
-    background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-    background-size: cover;
-
+  background: url("../images/featue-bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 .services__bcg {
-    
-	background: linear-gradient(to left, #{fade-out(#8b86a3, .2)} 0%,#{fade-out(#322e40, .2)} 100%), url('../images/architecture-22039_1280.jpg');
-	background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-    height: 50vh;
-    h2 {
-        font-size: 3rem;
-        @media only screen and (min-width: 768px) {
-          font-size: 7rem;
-        }
+  background: linear-gradient(
+      to left,
+      #{fade-out(#8b86a3, 0.2)} 0%,
+      #{fade-out(#322e40, 0.2)} 100%
+    ),
+    url("../images/architecture-22039_1280.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  height: 50vh;
+  h2 {
+    font-size: 3rem;
+    @media only screen and (min-width: 768px) {
+      font-size: 7rem;
     }
-    
+  }
 }
 
 .services__icons-wrapp {
   margin-bottom: 50px;
 }
 .services_link {
-  color:black;
+  color: black;
 }
 .services_link:hover {
   text-decoration: none;
-
 }
 
 .services_main {
-  
-    h2 {
-      font-size: 3rem;
-    }
+  h2 {
+    font-size: 3rem;
+  }
 }
 .public__background_img {
-    background-image: url('../images/public-buildings.jpg'),linear-gradient(to bottom, #{fade-out($brown, 1)} 0%,#{fade-out($brown, 1)} 100%);
-    background-size: cover;
-    background-position: cover no-repeat;
-    height: 450px;
-    background-attachment: fixed;
-    padding: 3rem;
-    transform: translateZ(-1px) scale(1);
+  background-image: url("../images/public-buildings.jpg"),
+    linear-gradient(
+      to bottom,
+      #{fade-out($brown, 1)} 0%,
+      #{fade-out($brown, 1)} 100%
+    );
+  background-size: cover;
+  background-position: cover no-repeat;
+  height: 450px;
+  background-attachment: fixed;
+  padding: 3rem;
+  transform: translateZ(-1px) scale(1);
 }
 .commercial__background_img {
-    background-image: url('../images/commercialBuildingsBcg1.jpg'),linear-gradient(to bottom, #{fade-out($brown, 1)} 0%,#{fade-out($brown, 1)} 100%);
-    background-size: cover;
-    background-position: cover no-repeat;
-    height: 450px;
-    background-attachment: fixed;
-    padding: 3rem;
-    transform: translateZ(-1px) scale(1);
-    
-
+  background-image: url("../images/commercialBuildingsBcg1.jpg"),
+    linear-gradient(
+      to bottom,
+      #{fade-out($brown, 1)} 0%,
+      #{fade-out($brown, 1)} 100%
+    );
+  background-size: cover;
+  background-position: cover no-repeat;
+  height: 450px;
+  background-attachment: fixed;
+  padding: 3rem;
+  transform: translateZ(-1px) scale(1);
 }
 .residential__background_img {
-    background-image: url('../images/residentialBcg.png'),linear-gradient(to bottom, #{fade-out($brown, 1)} 0%,#{fade-out($brown, 1)} 100%);
-    background-size: cover;
-    background-position: cover no-repeat;
-    transform: translateZ(-1px) scale(1);
+  background-image: url("../images/residentialBcg.png"),
+    linear-gradient(
+      to bottom,
+      #{fade-out($brown, 1)} 0%,
+      #{fade-out($brown, 1)} 100%
+    );
+  background-size: cover;
+  background-position: cover no-repeat;
+  transform: translateZ(-1px) scale(1);
 
-    height: 450px;
-    background-attachment: fixed;
-    padding: 3rem;
-  
-    
+  height: 450px;
+  background-attachment: fixed;
+  padding: 3rem;
 }
 .background_text {
-  
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-      height: auto;
-      padding: 2rem;
-      z-index: 2;   
-    }
+  background-blend-mode: overlay;
+  background-color: #fbc441;
+  background-size: cover;
+  background-position: cover no-repeat;
+  height: 450px;
+  padding: 6rem 5rem;
+  // transform: translateZ(3px);
+  /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 600px) {
+    height: auto;
+    padding: 2rem;
+    z-index: 2;
+  }
 
-@media only screen and (min-width: 768px) {
-  padding: 2rem;
-}
-  
-    background-blend-mode: overlay;
-    background-color:#FBC441;
-    background-size: cover;
-    background-position: cover no-repeat;
-    height: 450px;
-    padding: 6rem 5rem;
-    // transform: translateZ(3px);   
-    
- 
+  @media only screen and (min-width: 768px) {
+    padding: 2rem;
+  }
 }
 .background_text:nth-of-type(odd) {
-    
-    background-color:black;
-      
-    p {
-        color:#fff;
-    }
+  background-color: black;
+
+  p {
+    color: #fff;
+  }
 }
